# consultation_article

./: .gitignore  README.md  README_UTILISATEUR.md  consultation_article.spec  devbook.md  main.py  prepare_deployment.bat  pyproject.toml
backend/: api.py
creation_base_donnees/: constants.py  create_database.py  items.py  load_file.py  models.py
frontend/: main.py  main.py.backup
frontend/utils/: database.py  error_handlers.py  logging_config.py
frontend/views/: details_panel.py  image_panel.py  main_window.py  parent_tree_panel.py  search_panel.py  tree_panel.py
test/: test_api.py  test_items.py  test_load_file.py  test_models.py  test_nomenclature.py  test_nomenclatures.py  test_parent_hierarchy.py
