[project]
name = "consultation-article"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.13.0",
    "marimo>=0.12.8",
    "pip>=25.0.1",
    "polars>=1.27.1",
    "pytest>=8.3.5",
    "sqlmodel>=0.0.24",
    "unidecode>=1.3.8",
    "pyqt6>=6.6.1",
    "pillow>=10.2.0",
]
